<resources>
    <string name="app_name">healthScoreGoal</string>
    <string name="food">Food</string>
    <string name="main">Main</string>
    <string name="exercise">Exercise</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sleep">Sleep</string>
    <string name="click_this_to_delete_sleep_data" />
    <string name="data_deletion" />
    <string name="click_on_this_to_delete_all_data" />
    <string name="enter_the_day_here">Enter the day here.</string>
    <string name="enter_hours_slept_here">Enter hours slept here.</string>
    <string name="day">Day:</string>
    <string name="hours_slept">Hours slept:</string>
    <string name="enter_hours_slept">😴 Enter Hours Slept</string>
    <string name="add_new_fitness_data">Add New Fitness Data</string>
    <string name="delete_data"><![CDATA[Delete Data -->]]></string>
    <string name="add_new_journal_data" />
    <string name="add_sleep_info"><![CDATA[<Add sleep info>]]></string>
    <string name="add_meal_info"><![CDATA[<Add Meal Info>]]></string>
    <string name="add_exercise_info"><![CDATA[<Add Exercise Info>]]></string>
</resources>