<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@drawable/s_night">

    <EditText
        android:id="@+id/eTCalory"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="Enter Calory Amount Here."
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor='@color/white'
        android:textColorHint='#9a9a9c'
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTCarb" />

    <EditText
        android:id="@+id/eTCarb"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="Enter Carb Amount Here."
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor='@color/white'
        android:textColorHint='#9a9a9c'
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTSugar" />

    <EditText
        android:id="@+id/eTSugar"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="Enter Sugar Amount Here."
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor='@color/white'
        android:textColorHint='#9a9a9c'
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTFoodName" />

    <EditText
        android:id="@+id/eTFoodName"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="Enter Food Name Here."
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor='@color/white'
        android:textColorHint='#9a9a9c'
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepButton" />

    <TextView
        android:id="@+id/fNametv"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="Food Name:"
        android:textColor='@color/white'
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepButton" />

    <TextView
        android:id="@+id/fSugartv"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Sugar Amount:"
        android:textColor='@color/white'
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNametv" />

    <TextView
        android:id="@+id/fCarbtv"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Carb Amount:"
        android:textColor='@color/white'
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fSugartv" />

    <TextView
        android:id="@+id/fCaltv"
        android:layout_width="112dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Calory Amount:"
        android:textColor='@color/white'
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fCarbtv" />

    <Button
        android:id="@+id/sleepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/enter_hours_slept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTDay" />

    <Button
        android:id="@+id/foodButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Enter Meal Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTCalory" />

    <TextView
        android:id="@+id/sleptTV"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/hours_slept"
        android:textSize="20sp"
        android:textColor='@color/white'
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dayTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/day"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor='@color/white'
        app:layout_constraintEnd_toStartOf="@+id/eTDay"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleptTV" />

    <EditText
        android:id="@+id/eTHoursSlept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/enter_hours_slept_here"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:textColorHint='#9a9a9c'
        android:textColor='@color/white'
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/enter_the_day_here"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint='#9a9a9c'
        android:textColor='@color/white'
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTHoursSlept" />

</androidx.constraintlayout.widget.ConstraintLayout>